🔨 finally fixed the mask! gotta try it on safari tho..

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  --corner-rad: 40px;
+
 }
 
 body {
